--- a/src/main/java/com/kendy/dialog/bank_flow_frame.fxml
+++ b/src/main/java/com/kendy/dialog/bank_flow_frame.fxml
@@ -19,19 +19,29 @@
 
 <AnchorPane prefHeight="864.0" prefWidth="1296.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.BankFlowController">
    <children>
-      <TableView layoutX="52.0" layoutY="88.0" prefHeight="337.0" prefWidth="444.0">
+      <TableView layoutX="752.0" layoutY="140.0" prefHeight="671.0" prefWidth="526.0">
         <columns>
           <TableColumn prefWidth="75.0" text="C1" />
           <TableColumn prefWidth="75.0" text="C2" />
             <TableColumn prefWidth="75.0" text="C2" />
-            <TableColumn prefWidth="86.0" text="C2" />
-            <TableColumn prefWidth="93.0" text="C2" />
         </columns>
       </TableView>
-      <AnchorPane layoutX="515.0" layoutY="42.0" prefHeight="794.0" prefWidth="766.0">
+      <AnchorPane layoutX="14.0" layoutY="71.0" prefHeight="747.0" prefWidth="708.0">
          <children>
-            <ScrollPane fx:id="scrollDates" layoutX="61.0" prefHeight="771.0" prefViewportHeight="576.0" prefViewportWidth="152.0" prefWidth="644.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="61.0" AnchorPane.rightAnchor="61.0" AnchorPane.topAnchor="0.0" />
+            <ScrollPane fx:id="scrollDates" layoutX="-1.0" prefHeight="787.0" prefViewportHeight="576.0" prefViewportWidth="152.0" prefWidth="708.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
+      <Label contentDisplay="CENTER" layoutX="262.0" layoutY="27.0" opacity="0.7" prefHeight="36.0" prefWidth="199.0" text="银行流水每日详情" textFill="#daa213">
+         <font>
+            <Font size="22.0" />
+         </font>
+         <effect>
+            <Lighting diffuseConstant="0.93" light="$null" specularConstant="0.48" specularExponent="3.72" surfaceScale="6.27">
+               <bumpInput>
+                  <Shadow height="89.2" radius="45.582499999999996" width="95.13" />
+               </bumpInput>
+            </Lighting>
+         </effect>
+      </Label>
    </children>
 </AnchorPane>
