--- a/src/main/resources/dialog/TG_add_player_comment_frame.fxml
+++ b/src/main/resources/dialog/TG_add_player_comment_frame.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="543.0" prefWidth="365.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.TGAddCommentController">
+<AnchorPane prefHeight="543.0" prefWidth="365.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.tgController.TGAddCommentController">
    <children>
       <HBox layoutX="51.0" layoutY="23.0">
          <children>
