--- a/src/main/resources/dialog/TG_add_kaixiao_frame.fxml
+++ b/src/main/resources/dialog/TG_add_kaixiao_frame.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="477.0" prefWidth="447.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.TGAddKaixiaoController">
+<AnchorPane prefHeight="477.0" prefWidth="447.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.tgController.TGAddKaixiaoController">
    <children>
       <HBox layoutX="57.0" layoutY="317.0">
          <children>
