--- a/src/main/resources/dialog/MainStageees2.fxml
+++ b/src/main/resources/dialog/MainStageees2.fxml
@@ -153,7 +153,7 @@
                                  </children>
                               </HBox>
                               <Label layoutX="38.0" layoutY="13.0" prefHeight="20.0" prefWidth="43.0" text="时间：" />
-                              <Label fx:id="dateLabel" layoutX="81.0" layoutY="13.0" prefHeight="20.0" prefWidth="127.0" />
+                              <Label fx:id="softDateLabel" layoutX="81.0" layoutY="13.0" prefHeight="20.0" prefWidth="127.0" />
                            </children>
                         </AnchorPane>
                         <ScrollPane focusTraversable="false" layoutX="4.0" layoutY="-6.0" prefHeight="826.0" prefWidth="1327.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0">
