--- a/src/main/resources/dialog/MainStageees2.fxml
+++ b/src/main/resources/dialog/MainStageees2.fxml
@@ -26,7 +26,7 @@
                      <children>
                         <Group layoutX="9.0" layoutY="52.0">
                            <children> 
-                              <Label fx:id="lable_currentClubId" layoutX="216.0" layoutY="80.0" prefHeight="19.0" prefWidth="87.0" text="555550">
+                              <Label fx:id="currentClubId" layoutX="216.0" layoutY="80.0" prefHeight="19.0" prefWidth="87.0" text="555550">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
