--- a/src/main/resources/dialog/MainStageees2.fxml
+++ b/src/main/resources/dialog/MainStageees2.fxml
@@ -366,132 +366,121 @@
             </Tab>
             <Tab text="外债信息">
                <content>
-                  <ScrollPane prefViewportHeight="864.0" prefViewportWidth="1328.0">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="847.0" prefWidth="1799.0">
-                           <children>
-                              <TableView fx:id="tableWaizhai" layoutX="19.0" layoutY="112.0" prefHeight="206.0" prefWidth="152.0">
-                                <columns>
-                                  <TableColumn fx:id="waizhaiType" prefWidth="75.0" text="债务" />
-                                  <TableColumn fx:id="waizhaiMoney" prefWidth="75.0" />
-                                </columns>
-                              </TableView>
-                              <Button fx:id="waizhaiRefreshBtn" layoutX="117.0" layoutY="41.0" mnemonicParsing="false" onAction="#waizhaiRefreshAction" prefHeight="34.0" prefWidth="107.0" text="即时刷新" />
-                              <HBox fx:id="waizhaiHBox" layoutX="213.0" layoutY="109.0" prefHeight="721.0" prefWidth="1564.0" />
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </ScrollPane>
+               	<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="785.0" prefWidth="1073.0">
+                  <children>
+                     <ScrollPane prefViewportHeight="864.0" prefViewportWidth="1328.0">
+                        <content>
+                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="847.0" prefWidth="1799.0">
+                              <children>
+                                 <TableView fx:id="tableWaizhai" layoutX="19.0" layoutY="112.0" prefHeight="206.0" prefWidth="152.0">
+                                   <columns>
+                                     <TableColumn fx:id="waizhaiType" prefWidth="75.0" text="债务" />
+                                     <TableColumn fx:id="waizhaiMoney" prefWidth="75.0" />
+                                   </columns>
+                                 </TableView>
+                                 <Button fx:id="waizhaiRefreshBtn" layoutX="117.0" layoutY="41.0" mnemonicParsing="false" onAction="#waizhaiRefreshAction" prefHeight="34.0" prefWidth="107.0" text="即时刷新" />
+                                 <HBox fx:id="waizhaiHBox" layoutX="213.0" layoutY="109.0" prefHeight="721.0" prefWidth="1564.0" />
+                              </children>
+                           </AnchorPane>
+                        </content>
+                     </ScrollPane>
+                  </children>
+                 </AnchorPane>
                </content>
             </Tab>
             <Tab text="会员查询">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="785.0" prefWidth="1073.0">
                      <children>
-                        <SplitPane dividerPositions="0.29797979797979796" layoutX="637.0" layoutY="23.0" prefHeight="864.0" prefWidth="1328.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <items>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="862.0" prefWidth="463.0">
+                        <TextField fx:id="memberSearchName" layoutX="496.0" layoutY="109.0" onKeyPressed="#searchMemberByEnterEvent" prefHeight="23.0" prefWidth="160.0" promptText="会员名称" />
+                        <Button fx:id="memberSearchBtn" layoutX="656.0" layoutY="109.0" mnemonicParsing="false" onAction="#memberSearchAction" prefHeight="23.0" prefWidth="73.0" text="搜索会员" />
+                      <AnchorPane layoutX="789.0" layoutY="19.0" minHeight="0.0" minWidth="0.0" prefHeight="827.0" prefWidth="513.0">
+                           <children>
+                              <VBox layoutX="271.0" layoutY="209.0" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" prefHeight="612.0" prefWidth="297.0" spacing="7.0" AnchorPane.leftAnchor="150.0">
                                  <children>
-                                    <TextField fx:id="memberSearchName" layoutX="116.0" layoutY="248.0" onKeyPressed="#searchMemberByEnterEvent" prefHeight="23.0" prefWidth="160.0" promptText="会员名称" />
-                                    <Button fx:id="memberSearchBtn" layoutX="271.0" layoutY="248.0" mnemonicParsing="false" onAction="#memberSearchAction" prefHeight="23.0" prefWidth="73.0" text="搜索会员" />
-                                 </children>
-                              </AnchorPane>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="862.0" prefWidth="856.0">
-                                 <children>
-                                    <SplitPane dividerPositions="0.29797979797979796" layoutX="222.0" layoutY="208.0" prefHeight="862.0" prefWidth="928.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                      <items>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                    <Group>
+                                       <children>
+                                          <HBox layoutY="-1.0" prefHeight="18.0" prefWidth="297.0">
                                              <children>
-                                                <ListView fx:id="memberListView" layoutX="27.0" layoutY="249.0" prefHeight="246.0" prefWidth="216.0" />
-                                                <Label layoutX="43.0" layoutY="223.0" prefHeight="24.0" prefWidth="156.0" text="单击选项自动查询：" />
-                                             </children>
-                                          </AnchorPane>
-                                        <AnchorPane layoutX="1190.0" layoutY="3.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                             <children>
-                                                <VBox layoutX="271.0" layoutY="209.0" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" prefHeight="612.0" prefWidth="297.0" spacing="7.0" AnchorPane.leftAnchor="150.0">
-                                                   <children>
-                                                      <Group>
-                                                         <children>
-                                                            <HBox layoutY="-1.0" prefHeight="18.0" prefWidth="297.0">
-                                                               <children>
-                                                                  <Label fx:id="messageLabel11" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="51.0" text="时间：" textAlignment="LEFT" wrapText="true">
-                                                                     <font>
-                                                                        <Font name="System Bold" size="13.0" />
-                                                                     </font>
-                                                                  </Label>
-                                                                  <Label fx:id="memberDateStr" prefHeight="18.0" prefWidth="97.0" text="2017-00-00" textAlignment="LEFT" wrapText="true">
-                                                                     <font>
-                                                                        <Font size="13.0" />
-                                                                     </font>
-                                                                  </Label>
-                                                               </children>
-                                                            </HBox>
-                                                         </children>
-                                                      </Group>
-                                                      <Group>
-                                                         <children>
-                                                            <Label fx:id="detailsLabel14" prefHeight="15.0" prefWidth="86.0" text="玩家ID：" textAlignment="LEFT" wrapText="true">
-                                                               <font>
-                                                                  <Font name="System Bold" size="12.0" />
-                                                               </font>
-                                                            </Label>
-                                                            <Label fx:id="memberPlayerId" layoutX="63.0" prefHeight="15.0" prefWidth="121.0" text="00000" textAlignment="LEFT" wrapText="true">
-                                                               <font>
-                                                                  <Font size="12.0" />
-                                                               </font>
-                                                            </Label>
-                                                         </children>
-                                                      </Group>
-                                                      <Group>
-                                                         <children>
-                                                            <Label fx:id="detailsLabel141" prefHeight="15.0" prefWidth="64.0" text="玩家名称：" textAlignment="LEFT" wrapText="true">
-                                                               <font>
-                                                                  <Font name="System Bold" size="12.0" />
-                                                               </font>
-                                                            </Label>
-                                                            <Label fx:id="memberPlayerName" layoutX="71.0" prefHeight="15.0" prefWidth="103.0" text="小林" textAlignment="LEFT" wrapText="true">
-                                                               <font>
-                                                                  <Font size="12.0" />
-                                                               </font>
-                                                            </Label>
-                                                         </children>
-                                                      </Group>
-                                                      <Group>
-                                                         <children>
-                                                            <Label fx:id="detailsLabel1411" prefHeight="15.0" prefWidth="72.0" text="战绩总和：" textAlignment="LEFT" wrapText="true" />
-                                                            <Label fx:id="memberSumOfZJ" alignment="CENTER" layoutX="71.0" prefHeight="15.0" prefWidth="224.0" style="-fx-background-color: #CAE1FF;" text="0" textAlignment="LEFT" wrapText="true">
-                                                               <font>
-                                                                  <Font size="12.0" />
-                                                               </font>
-                                                            </Label>
-                                                         </children>
-                                                      </Group>
-                                                      <TableView fx:id="tableMemberZJ" prefHeight="473.0" prefWidth="297.0">
-                                                         <columns>
-                                                            <TableColumn fx:id="memberJu" prefWidth="112.0" text="场次" />
-                                                            <TableColumn fx:id="memberZJ" prefWidth="160.0" text="战绩" />
-                                                         </columns>
-                                                      </TableView>
-                                                   </children>
-                                                </VBox>
-                                                <Button fx:id="memberZJQueryBtn" disable="true" layoutX="24.0" layoutY="185.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="122.0" text="会员当天战绩查询" />
-                                                <Button disable="true" layoutX="24.0" layoutY="104.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="123.0" text="会员历史战绩查询">
-                                                   <font>
-                                                      <Font name="System Bold" size="12.0" />
-                                                   </font></Button>
-                                                <Label fx:id="memberTotalZJ" layoutX="150.0" layoutY="139.0" prefHeight="18.0" prefWidth="130.0" text="0.0" textAlignment="LEFT" wrapText="true">
+                                                <Label fx:id="messageLabel11" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="51.0" text="时间：" textAlignment="LEFT" wrapText="true">
                                                    <font>
                                                       <Font name="System Bold" size="13.0" />
                                                    </font>
                                                 </Label>
+                                                <Label fx:id="memberDateStr" prefHeight="18.0" prefWidth="97.0" text="2017-00-00" textAlignment="LEFT" wrapText="true">
+                                                   <font>
+                                                      <Font size="13.0" />
+                                                   </font>
+                                                </Label>
                                              </children>
-                                          </AnchorPane>
-                                      </items>
-                                    </SplitPane>
+                                          </HBox>
+                                       </children>
+                                    </Group>
+                                    <Group>
+                                       <children>
+                                          <Label fx:id="detailsLabel14" prefHeight="15.0" prefWidth="86.0" text="玩家ID：" textAlignment="LEFT" wrapText="true">
+                                             <font>
+                                                <Font name="System Bold" size="12.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="memberPlayerId" layoutX="63.0" prefHeight="15.0" prefWidth="121.0" text="00000" textAlignment="LEFT" wrapText="true">
+                                             <font>
+                                                <Font size="12.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </Group>
+                                    <Group>
+                                       <children>
+                                          <Label fx:id="detailsLabel141" prefHeight="15.0" prefWidth="64.0" text="玩家名称：" textAlignment="LEFT" wrapText="true">
+                                             <font>
+                                                <Font name="System Bold" size="12.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="memberPlayerName" layoutX="71.0" prefHeight="15.0" prefWidth="103.0" text="小林" textAlignment="LEFT" wrapText="true">
+                                             <font>
+                                                <Font size="12.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </Group>
+                                    <Group>
+                                       <children>
+                                          <Label fx:id="detailsLabel1411" prefHeight="15.0" prefWidth="72.0" text="战绩总和：" textAlignment="LEFT" wrapText="true" />
+                                          <Label fx:id="memberSumOfZJ" alignment="CENTER" layoutX="71.0" prefHeight="15.0" prefWidth="224.0" style="-fx-background-color: #CAE1FF;" text="0" textAlignment="LEFT" wrapText="true">
+                                             <font>
+                                                <Font size="12.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </Group>
+                                    <TableView fx:id="tableMemberZJ" prefHeight="473.0" prefWidth="297.0">
+                                       <columns>
+                                          <TableColumn fx:id="memberJu" prefWidth="112.0" text="场次" />
+                                          <TableColumn fx:id="memberZJ" prefWidth="160.0" text="战绩" />
+                                       </columns>
+                                    </TableView>
                                  </children>
-                              </AnchorPane>
-                          </items>
-                        </SplitPane>
+                              </VBox>
+                              <Button fx:id="memberZJQueryBtn" disable="true" layoutX="24.0" layoutY="185.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="122.0" text="会员当天战绩查询" />
+                              <Button disable="true" layoutX="24.0" layoutY="104.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="123.0" text="会员历史战绩查询">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font>
+                              </Button>
+                              <Label fx:id="memberTotalZJ" layoutX="150.0" layoutY="139.0" prefHeight="18.0" prefWidth="130.0" text="0.0" textAlignment="LEFT" wrapText="true">
+                                 <font>
+                                    <Font name="System Bold" size="13.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                      <AnchorPane layoutX="474.0" layoutY="132.0" minHeight="0.0" minWidth="0.0" prefHeight="677.0" prefWidth="313.0">
+                           <children>
+                              <ListView fx:id="memberListView" layoutX="22.0" layoutY="54.0" prefHeight="606.0" prefWidth="216.0" />
+                              <Label layoutX="22.0" layoutY="30.0" prefHeight="24.0" prefWidth="156.0" text="单击选项自动查询：" />
+                           </children>
+                        </AnchorPane>
                      </children>
                   </AnchorPane>
                </content>
