--- a/src/main/resources/dialog/Quota_Tab_Fram.fxml
+++ b/src/main/resources/dialog/Quota_Tab_Fram.fxml
@@ -18,64 +18,56 @@
 
 <AnchorPane prefHeight="864.0" prefWidth="1296.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.QuotaController">
     <children>
-       <SplitPane dividerPositions="0.2789799072642968" layoutX="637.0" layoutY="23.0" prefHeight="864.0" prefWidth="1328.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-          <items>
-             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="862.0" prefWidth="355.0">
+       <AnchorPane layoutX="383.0" layoutY="1.0" minHeight="0.0" minWidth="0.0" prefHeight="862.0" prefWidth="913.0">
+          <children>
+             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="860.0" prefWidth="894.0">
                 <children>
-                   <Label layoutX="86.0" layoutY="319.0" prefHeight="24.0" prefWidth="156.0" />
-                  <Button fx:id="LM_Btn1" layoutX="28.0" layoutY="69.0" mnemonicParsing="false" onAction="#LM1_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟1" />
-                  <Button layoutX="118.0" layoutY="69.0" mnemonicParsing="false" onAction="#LM2_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟2" />
-                  <Button layoutX="211.0" layoutY="69.0" mnemonicParsing="false" onAction="#LM3_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟3" />
-                   <TableView fx:id="tableQuotaPay" layoutX="28.0" layoutY="157.0" prefHeight="666.0" prefWidth="321.0">
+                   <TableView fx:id="tableQuota" layoutX="17.0" layoutY="21.0" prefHeight="364.0" prefWidth="871.0">
                       <columns>
-                         <TableColumn fx:id="quotaMoneyPaytor" prefWidth="114.0" text="付款方" />
-                         <TableColumn fx:id="quotaMoney" text="账目" />
-                         <TableColumn fx:id="quotaMoneyGather" minWidth="0.0" prefWidth="109.0" text="收款方" />
+                         <TableColumn fx:id="quotaClubName" prefWidth="171.0" text="俱乐部名称" />
+                         <TableColumn fx:id="quotaJieyu" prefWidth="81.0" text="账目" />
+                         <TableColumn fx:id="quotaHedgeFirst" minWidth="0.0" prefWidth="87.0" text="已对冲1" />
+                        <TableColumn fx:id="quotaHedgeSecond" minWidth="0.0" prefWidth="93.0" text="已对冲2" />
+                        <TableColumn fx:id="quotaHedgeThree" minWidth="0.0" prefWidth="110.0" text="已对冲3" />
+                        <TableColumn fx:id="quotaHedgeFour" minWidth="0.0" prefWidth="107.0" text="已对冲4" />
+                        <TableColumn fx:id="quotaHedgeFive" minWidth="0.0" prefWidth="108.0" text="已对冲5" />
+                        <TableColumn fx:id="quotaRest" minWidth="0.0" prefWidth="98.0" text="剩余" />
                       </columns>
                    </TableView>
-                  <Label layoutX="28.0" layoutY="122.0" prefHeight="24.0" prefWidth="71.0" text="当前联盟：" />
-                  <Label fx:id="currentLMLabels" layoutX="95.0" layoutY="119.0" prefHeight="31.0" prefWidth="93.0" text="联盟1" />
-                  <Hyperlink layoutX="248.0" layoutY="124.0" onAction="#exportClubPayExcel" prefHeight="21.0" prefWidth="110.0" text="导出俱乐部结账" />
+                  <TableView fx:id="tableQuotaBank" layoutX="15.0" layoutY="420.0" prefHeight="396.0" prefWidth="871.0">
+                     <columns>
+                        <TableColumn fx:id="clubName" prefWidth="148.0" text="俱乐部名称" />
+                        <TableColumn fx:id="mobilePayType" prefWidth="66.0" text="移动类型" />
+                        <TableColumn fx:id="personName" minWidth="0.0" prefWidth="88.0" text="姓名" />
+                        <TableColumn fx:id="phoneNumber" minWidth="0.0" prefWidth="192.0" text="手机" />
+                        <TableColumn fx:id="bankType" minWidth="0.0" prefWidth="70.0" text="银行类型" />
+                        <TableColumn fx:id="bankAccountInfo" minWidth="0.0" prefWidth="289.0" text="银行信息" />
+                     </columns>
+                  </TableView>
+                  <Label layoutX="16.0" layoutY="388.0" prefHeight="31.0" prefWidth="308.0" text="\$$手动输入银行卡与支付宝信息$$" textFill="#9a9300" />
+                  <Hyperlink layoutX="803.0" layoutY="395.0" onAction="#addClubBankAction" prefHeight="21.0" prefWidth="40.0" text="新增" />
+                  <Hyperlink layoutX="846.0" layoutY="395.0" onAction="#updateClubBankAction" prefHeight="21.0" prefWidth="40.0" text="修改" />
                 </children>
              </AnchorPane>
-             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="862.0" prefWidth="913.0">
-                <children>
-                   <SplitPane layoutX="222.0" layoutY="208.0" prefHeight="862.0" prefWidth="928.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                      <items>
-                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="860.0" prefWidth="894.0">
-                            <children>
-                               <TableView fx:id="tableQuota" layoutX="17.0" layoutY="21.0" prefHeight="364.0" prefWidth="871.0">
-                                  <columns>
-                                     <TableColumn fx:id="quotaClubName" prefWidth="171.0" text="俱乐部名称" />
-                                     <TableColumn fx:id="quotaJieyu" prefWidth="81.0" text="账目" />
-                                     <TableColumn fx:id="quotaHedgeFirst" minWidth="0.0" prefWidth="87.0" text="已对冲1" />
-                                    <TableColumn fx:id="quotaHedgeSecond" minWidth="0.0" prefWidth="93.0" text="已对冲2" />
-                                    <TableColumn fx:id="quotaHedgeThree" minWidth="0.0" prefWidth="110.0" text="已对冲3" />
-                                    <TableColumn fx:id="quotaHedgeFour" minWidth="0.0" prefWidth="107.0" text="已对冲4" />
-                                    <TableColumn fx:id="quotaHedgeFive" minWidth="0.0" prefWidth="108.0" text="已对冲5" />
-                                    <TableColumn fx:id="quotaRest" minWidth="0.0" prefWidth="98.0" text="剩余" />
-                                  </columns>
-                               </TableView>
-                              <TableView fx:id="tableQuotaBank" layoutX="15.0" layoutY="420.0" prefHeight="396.0" prefWidth="871.0">
-                                 <columns>
-                                    <TableColumn fx:id="clubName" prefWidth="148.0" text="俱乐部名称" />
-                                    <TableColumn fx:id="mobilePayType" prefWidth="66.0" text="移动类型" />
-                                    <TableColumn fx:id="personName" minWidth="0.0" prefWidth="88.0" text="姓名" />
-                                    <TableColumn fx:id="phoneNumber" minWidth="0.0" prefWidth="192.0" text="手机" />
-                                    <TableColumn fx:id="bankType" minWidth="0.0" prefWidth="70.0" text="银行类型" />
-                                    <TableColumn fx:id="bankAccountInfo" minWidth="0.0" prefWidth="289.0" text="银行信息" />
-                                 </columns>
-                              </TableView>
-                              <Label layoutX="16.0" layoutY="388.0" prefHeight="31.0" prefWidth="308.0" text="\$$手动输入银行卡与支付宝信息$$" textFill="#9a9300" />
-                              <Hyperlink layoutX="803.0" layoutY="395.0" onAction="#addClubBankAction" prefHeight="21.0" prefWidth="40.0" text="新增" />
-                              <Hyperlink layoutX="846.0" layoutY="395.0" onAction="#updateClubBankAction" prefHeight="21.0" prefWidth="40.0" text="修改" />
-                            </children>
-                         </AnchorPane>
-                      </items>
-                   </SplitPane>
-                </children>
-             </AnchorPane>
-          </items>
-       </SplitPane>
+          </children>
+       </AnchorPane>
+       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="862.0" prefWidth="355.0">
+          <children>
+             <Label layoutX="86.0" layoutY="319.0" prefHeight="24.0" prefWidth="156.0" />
+            <Button fx:id="LM_Btn1" layoutX="28.0" layoutY="69.0" mnemonicParsing="false" onAction="#LM1_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟1" />
+            <Button layoutX="118.0" layoutY="69.0" mnemonicParsing="false" onAction="#LM2_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟2" />
+            <Button layoutX="211.0" layoutY="69.0" mnemonicParsing="false" onAction="#LM3_Btn_Action" prefHeight="23.0" prefWidth="71.0" text="联盟3" />
+             <TableView fx:id="tableQuotaPay" layoutX="28.0" layoutY="157.0" prefHeight="666.0" prefWidth="321.0">
+                <columns>
+                   <TableColumn fx:id="quotaMoneyPaytor" prefWidth="114.0" text="付款方" />
+                   <TableColumn fx:id="quotaMoney" text="账目" />
+                   <TableColumn fx:id="quotaMoneyGather" minWidth="0.0" prefWidth="109.0" text="收款方" />
+                </columns>
+             </TableView>
+            <Label layoutX="28.0" layoutY="122.0" prefHeight="24.0" prefWidth="71.0" text="当前联盟：" />
+            <Label fx:id="currentLMLabels" layoutX="95.0" layoutY="119.0" prefHeight="31.0" prefWidth="93.0" text="联盟1" />
+            <Hyperlink layoutX="248.0" layoutY="124.0" onAction="#exportClubPayExcel" prefHeight="21.0" prefWidth="110.0" text="导出俱乐部结账" />
+          </children>
+       </AnchorPane>
     </children>
  </AnchorPane>
