--- a/src/main/resources/dialog/bank_flow_frame.fxml
+++ b/src/main/resources/dialog/bank_flow_frame.fxml
@@ -20,7 +20,7 @@
 
 <AnchorPane prefHeight="864.0" prefWidth="1296.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.BankFlowController">
    <children>
-      <JFXButton fx:id="bankFlowTitle" buttonType="RAISED" layoutX="243.0" layoutY="22.0" opacity="0.78" prefHeight="52.0" prefWidth="825.0" text="银行流水每日详情" textFill="#9c8617">
+      <JFXButton fx:id="bankFlowTitle" buttonType="RAISED" layoutX="243.0" layoutY="22.0" opacity="0.78" prefHeight="52.0" prefWidth="825.0" text="银行流水今日详情" textFill="#9c8617">
          <font>
             <Font name="System Bold" size="26.0" />
          </font>
@@ -40,7 +40,18 @@
             <ScrollPane fx:id="scrollDates" layoutX="-1.0" prefHeight="740.0" prefViewportHeight="576.0" prefViewportWidth="152.0" prefWidth="1095.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
-      <JFXButton buttonType="RAISED" layoutX="1156.0" layoutY="29.0" onAction="#seeHistoryStaticAction" opacity="0.85" prefHeight="51.0" prefWidth="116.0" text="历史汇总图" textFill="#bc7070" visible="false">
+      <JFXButton buttonType="RAISED" layoutX="1127.0" layoutY="29.0" onAction="#seeHistoryStaticAction" opacity="0.85" prefHeight="51.0" prefWidth="73.0" text="下拉" textFill="#6063f5">
+         <font>
+            <Font size="17.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton buttonType="RAISED" layoutX="1202.0" layoutY="29.0" onAction="#seeDetailStaticAction" opacity="0.85" prefHeight="51.0" prefWidth="73.0" text="返回" textFill="#6063f5">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
          <font>
             <Font size="17.0" />
          </font>
