--- a/src/main/resources/dialog/LM_Tab_Fram.fxml
+++ b/src/main/resources/dialog/LM_Tab_Fram.fxml
@@ -67,7 +67,7 @@
                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="781.0" prefWidth="870.0">
                             <children>
                                <Label layoutX="30.0" layoutY="87.0" prefHeight="24.0" prefWidth="64.0" text="合计桌费：" />
-                               <ListView fx:id="clubListView" layoutX="30.0" layoutY="232.0" prefHeight="379.0" prefWidth="205.0" />
+                               <ListView fx:id="clubListView" layoutX="30.0" layoutY="232.0" prefHeight="259.0" prefWidth="205.0" />
                                <Label layoutX="30.0" layoutY="199.0" prefHeight="24.0" prefWidth="175.0" text="单个俱乐部（点击获取信息）：" />
                                <Button fx:id="allClubViewBtn" layoutX="31.0" layoutY="136.0" mnemonicParsing="false" onAction="#viewAllClubAction" prefHeight="23.0" prefWidth="185.0" text="查看所有俱乐部总帐单" />
                               <ScrollPane layoutX="251.0" layoutY="17.0" prefHeight="839.0" prefViewportHeight="829.0" prefViewportWidth="668.0" prefWidth="695.0">
@@ -97,6 +97,25 @@
                               <Label fx:id="sumOfZF" layoutX="92.0" layoutY="78.0" prefHeight="44.0" prefWidth="93.0" text="0" />
                               <Label layoutX="30.0" layoutY="54.0" prefHeight="24.0" prefWidth="64.0" text="当前联盟：" />
                               <Label fx:id="currentLMLabel" layoutX="92.0" layoutY="44.0" prefHeight="44.0" prefWidth="93.0" text="联盟1" />
+                              <TableView fx:id="tableLevel" layoutX="33.0" layoutY="543.0" prefHeight="282.0" prefWidth="200.0">
+                                <columns>
+                                  <TableColumn fx:id="key" prefWidth="75.0" text="级别" />
+                                  <TableColumn fx:id="value" prefWidth="75.0" text="有效桌数" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                              <JFXButton layoutX="30.0" layoutY="518.0" onAction="#clearTableLevelAction" text="清空下表" textFill="#8d7f60">
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
+                              </JFXButton>
+                              <JFXButton layoutX="193.0" layoutY="518.0" onAction="#loadTableLevelAction" text="刷新" textFill="#8d7f60">
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
+                              </JFXButton>
                             </children>
                          </AnchorPane>
                       </items>
